--- a/biodata.html
+++ b/biodata.html
@@ -4,7 +4,23 @@
     <tr>
         <td>Name</td>
         <td>Nur Izzah Hannani binti Mohammad</td>
-        <td></td>
+        <td>img</td>
+    </tr>
+    <tr>
+        <td>Date of Birth</td>
+        <td>01-08-2002</td>
+    </tr>
+    <tr>
+        <td>Religion</td>
+        <td>Islam</td>
+    </tr>
+    <tr>
+        <td>Race</td>
+        <td>Malay</td>
+    </tr>
+    <tr>
+        <td>Address</td>
+        <td>...</td>
     </tr>
 </table>
 </html>
